@@ -89,7 +89,9 @@ public class ContentStorageInformationImpl implements ContentStorageInformation
     {
         final NodeRef nodeRef = new NodeRef(StoreRef.STORE_REF_WORKSPACE_SPACESSTORE, nodeId);
         final QName propQName = getQName(contentPropName);
-        return contentService.requestSendContentToArchive(nodeRef, propQName, archiveContentRequest.getArchiveParams());
+        final Map<String, Serializable> archiveParams =
+                archiveContentRequest == null ? Collections.emptyMap() : archiveContentRequest.getArchiveParams();
+        return contentService.requestSendContentToArchive(nodeRef, propQName, archiveParams);
     }
 
     /**
@@ -101,9 +103,10 @@ public class ContentStorageInformationImpl implements ContentStorageInformation
     {
         final NodeRef nodeRef = new NodeRef(StoreRef.STORE_REF_WORKSPACE_SPACESSTORE, nodeId);
         final QName propQName = getQName(contentPropName);
-        final Map<String, Serializable> restoreParams = restoreArchivedContentRequest.getRestorePriority() == null ?
-                Collections.emptyMap() :
-                Map.of(ContentRestoreParams.RESTORE_PRIORITY.name(), restoreArchivedContentRequest.getRestorePriority());
+        final Map<String, Serializable> restoreParams =
+                (restoreArchivedContentRequest == null || restoreArchivedContentRequest.getRestorePriority() == null) ?
+                        Collections.emptyMap() :
+                        Map.of(ContentRestoreParams.RESTORE_PRIORITY.name(), restoreArchivedContentRequest.getRestorePriority());
         return contentService.requestRestoreContentFromArchive(nodeRef, propQName, restoreParams);
     }
 
